examples/test/testpolicy5533.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5533
  namespace: namespace266
spec:
  podSelector:
    matchLabels:
      key46: value43
      key37: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value41
          key4: value32
      podSelector:
        matchLabels:
          key40: value46
          key29: value19
          key0: value23
